--- a/styles/index.css
+++ b/styles/index.css
@@ -2,4 +2,5 @@
 @import url("../vendor/font/inter/inter.css");
 @import url("../blocks/body/body.css");
 @import url("../blocks/header/header.css");
+@import url("../blocks/profile/profile.css");
 @import url("../blocks/footer/footer.css");
