--- a/styles/index.css
+++ b/styles/index.css
@@ -6,3 +6,5 @@
 @import url("../blocks/elements/elements.css");
 @import url("../blocks/element/element.css");
 @import url("../blocks/footer/footer.css");
+@import url("../blocks/profile-modal/profile-modal.css");
+@import url("../blocks/form/form.css");
