--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,3 +1,6 @@
+@import url("./_type/form__input_type_job.css");
+@import url("./_type/form__input_type_name.css");
+
 .form__input {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding: 0 0 13px;
