--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -3,4 +3,23 @@
 .form {
   display: flex;
   flex-flow: column nowrap;
+  width: 165px;
+}
+
+@media screen and (min-width: 375px){
+  .form {
+    width: 200px;
+  }
+}
+
+@media screen and (min-width: 425px){
+  .form {
+    width: 245px;
+  }
+}
+
+@media screen and (min-width: 768px){
+  .form {
+    width: 358px;
+  }
 }
