--- a/blocks/popup/__btn/popup__btn.css
+++ b/blocks/popup/__btn/popup__btn.css
@@ -1,7 +1,7 @@
-.profile-modal__btn {
+.popup__btn {
   background: #000000;
-  max-width: 358px;
-  padding: 14px 125px 18px;
+  width: 100%;
+  padding: 14px 40px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -14,6 +14,13 @@
   cursor: pointer;
 }
 
-.profile-modal__btn:hover {
+.popup__btn:hover {
   background: rgba(0, 0, 0, 0.8);
+}
+
+@media screen and (min-width: 768px) {
+  .popup__btn {
+    padding: 14px 125px;
+    max-width: 358px;
+  }
 }
