--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,4 @@
-.profile-modal__content {
+.popup__container {
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   padding: 34px 36px 36px;
   background: white;
@@ -7,4 +7,13 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+@media screen and (min-width: 768px) {
+  .popup__container {
+    max-width: 430px;
+  }
 }
