--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -7,9 +7,10 @@
   border: 1px solid #ffffff;
   background-color: black;
   padding: 0;
-  display: flex;
-  justify-items: center;
-  align-items: center;
+  background-image: url('../../../images/edit-icon.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 7.5px;
   cursor: pointer;
   transition: 0.2s ease-in-out;
 }
@@ -22,5 +23,6 @@
   .profile__edit-btn {
     top: 19px;
     right: 0;
+    background-size: 10px;
   }
 }
