--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,9 @@
 .element__image {
   border-radius: 10px 10px 0px 0px;
-  object-fit: cover;
   width: 100%;
-  max-height: 282px;
+  height: 282px;
+  background-image: url('../../../images/yosemite.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
