--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,11 +5,15 @@
   padding: 0;
   margin: 0;
   text-align: center;
+  max-width: 201px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 @media screen and (min-width: 768px) {
   .profile__name {
-    max-width: 428px;
+    max-width: 380px;
     margin: 0 0 16px;
     font-size: 42px;
     line-height: 1.33;
