--- a/blocks/element/__like-icon/element__like-icon.css
+++ b/blocks/element/__like-icon/element__like-icon.css
@@ -1,5 +1,12 @@
 .element__like-icon {
   width: 21px;
-  height: 18px;
+  height: 19px;
   align-self: center;
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
+  background-image: url("../../../images/heart.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
