--- a/blocks/element/__info/element__info.css
+++ b/blocks/element/__info/element__info.css
@@ -4,6 +4,7 @@
   border-radius: 0px 0px 10px 10px;
   padding: 25px 21px 31px;
   display: flex;
+  max-height: 80px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
