--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -4,4 +4,8 @@
   font-weight: 900;
   padding: 0;
   margin: 0;
+  max-width: 224px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
