--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,6 +2,7 @@
 @import url(./__info/element__info.css);
 @import url(./__title/element__title.css);
 @import url(./__like-icon/element__like-icon.css);
+@import url(./__delete-btn/element__delete-btn.css);
 
 .element {
   list-style: none;
@@ -10,4 +11,5 @@
   flex-flow: column nowrap;
   margin: 0;
   max-height: 361px;
+  position: relative;
 }
