--- a/blocks/element/__info/element__info.css
+++ b/blocks/element/__info/element__info.css
@@ -2,7 +2,7 @@
   background-color: #ffffff;
   color: #000000;
   border-radius: 0px 0px 10px 10px;
-  padding: 25px 21px 31px;
+  padding: 25px 21px;
   display: flex;
   max-height: 80px;
   box-sizing: border-box;
