--- a/blocks/element/__like-btn/element__like-btn_default.css
+++ b/blocks/element/__like-btn/element__like-btn_default.css
@@ -1,4 +1,4 @@
-.element__like-icon {
+.element__like-btn_default {
   width: 21px;
   height: 19px;
   align-self: center;
@@ -9,4 +9,9 @@
   background-position: center;
   background-repeat: no-repeat;
   cursor: pointer;
+  transition: .1s ease;
+}
+
+.element__like-btn:hover {
+  opacity: 0.7;
 }
