--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -3,6 +3,7 @@
   width: 120px;
   border-radius: 50%;
   margin: 0 auto 10px;
+  background-size: cover;
 }
 
 @media screen and (min-width: 768px) {
