--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,5 @@
 @import url("./__container/popup__container.css");
+@import url("./__image/popup__image.css");
 @import url("./__btn/popup__btn.css");
 @import url("./__title/popup__title.css");
 @import url("./__close/popup__close.css");
