feat: add popup image from card

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,6 @@
 @import url("./__container/popup__container.css");
 @import url("./__image/popup__image.css");
+@import url("./__image-title/popup__image-title.css");
 @import url("./__btn/popup__btn.css");
 @import url("./__title/popup__title.css");
 @import url("./__close/popup__close.css");
@@ -12,6 +13,8 @@
   height: 100%;
   width: 100%;
   display: none;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
