--- a/blocks/popup/__image/popup__image.css
+++ b/blocks/popup/__image/popup__image.css
@@ -1,10 +1,11 @@
 .popup__image {
-  width: 100%;
-  max-width: 75vw;
-  height: 100%;
-  max-height: 75vh;
   position: relative;
-  background-size: cover;
+  height: 100%;
+  width: auto;
+  background-size: contain;
   border-radius: 5px;
-  background-image: url(../../../images/lago-di-braies.jpg);
+  margin: 0;
+  max-width: 75vw;
+  max-height: 75vh;
+  background-repeat: no-repeat;
 }
