--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,5 @@
 @import url("./__container/popup__container.css");
+@import url("./__image-container/popup__image-container.css");
 @import url("./__image/popup__image.css");
 @import url("./__image-title/popup__image-title.css");
 @import url("./__btn/popup__btn.css");
