--- a/blocks/popup/__image-title/popup__image-title.css
+++ b/blocks/popup/__image-title/popup__image-title.css
@@ -1,9 +1,7 @@
 .popup__image-title {
   padding: 0;
-  margin: 0;
+  margin: 10px 0 0;
   font-size: 12px;
   line-height: 1.25;
-  position: absolute;
-  bottom: -20px;
-  left: 0;
+  align-self: flex-start;
 }
