fix: clean up semantics and form css

--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -11,7 +11,7 @@
   border-right-style: hidden;
   border-left-style: hidden;
   border-bottom-style: groove;
-  background-color: #eee;
-  background: #ffffff;
+  color: #000;
+  background-color: #ffffff;
   width: 100%;
 }
