--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -5,7 +5,7 @@
   -webkit-appearance: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding: 0 0 13px;
-  margin: 0 0 30px;
+  margin: 0;
   font-size: 14px;
   line-height: 1.21;
   border-top-style: hidden;
