--- a/blocks/popup/__btn/popup__btn.css
+++ b/blocks/popup/__btn/popup__btn.css
@@ -2,6 +2,7 @@
   background: #000000;
   width: 100%;
   padding: 14px 40px;
+  margin: 31px 0 0;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
