--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -3,6 +3,7 @@
 @import url("./__image/popup__image.css");
 @import url("./__image-title/popup__image-title.css");
 @import url("./__btn/popup__btn.css");
+@import url("./__btn/popup__btn_disabled.css");
 @import url("./__title/popup__title.css");
 @import url("./__close/popup__close.css");
 
