--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,5 +1,7 @@
 @import url("./__input/form__input.css");
 @import url("./__input-error/form__input-error.css");
+@import url("./__input-label/form__input-label.css");
+@import url("./__input/_type/form__input_type_error.css");
 
 .form {
   display: flex;
