--- a/blocks/popup/__btn/popup__btn_disabled.css
+++ b/blocks/popup/__btn/popup__btn_disabled.css
@@ -1,4 +1,11 @@
 .popup__btn_disabled {
   color: rgba(0, 0, 0, 0.2);
   background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 2px;
+  pointer-events: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
